# zerovision

./: CMakeLists.txt  LICENSE  README.md
include/: scan_filesystem.h  scan_network.h  scan_processes.h  scan_services.h  zerovuln.h
scripts/: config.sh  scan_vulns.sh
src/: main.cpp  scan_filesystem.cpp  scan_network.cpp  scan_processes.cpp  scan_services.cpp  zerovuln.cpp
